# governance-program-library

./: package.json
programs/gateway/: Cargo.toml
programs/gateway/tests/program_test/: gateway_voter_test.rs  governance_test.rs  program_test_bench.rs  tools.rs
programs/nft-voter/: Cargo.toml
programs/nft-voter/tests/: cast_nft_vote.rs  update_voter_weight_record.rs
programs/nft-voter/tests/program_test/: governance_test.rs  nft_voter_test.rs  program_test_bench.rs  token_metadata_test.rs
programs/quadratic/: Cargo.toml
programs/quadratic/src/instructions/: update_voter_weight_record.rs
programs/quadratic/src/util/: mod.rs
