[package]
name = "gpl-gateway"
version = "0.1.1"
description = "SPL Governance addin gateway"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { git = "https://github.com/dovahcrow/anchor", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/dovahcrow/anchor" }
itertools = "0.10.2"
solana-gateway = "0.2.2"
solana-program = "1.10.29"
spl-governance = { git = "https://github.com/solana-labs/solana-program-library.git", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.2"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.10.29"
solana-program-test = "1.10.29"